# src/Form/BookmarkType.php
@@ -1,0 +1,25 @@
+<?php
+
+namespace App\Form;
+
+use App\Entity\Bookmark;
+use Symfony\Component\Form\AbstractType;
+use Symfony\Component\Form\FormBuilderInterface;
+use Symfony\Component\OptionsResolver\OptionsResolver;
+
+class BookmarkType extends AbstractType
+{
+    public function buildForm(FormBuilderInterface $builder, array $options): void
+    {
+        $builder
+            ->add('url')
+            ->add('name');
+    }
+
+    public function configureOptions(OptionsResolver $resolver): void
+    {
+        $resolver->setDefaults([
+            'data_class' => Bookmark::class,
+        ]);
+    }
+}
